crates/runtime/tests/models/snapshots/integration_models__models__search__openai_basic_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.66",
      "dataset": "qs",
      "matches": {
        "answer": [
          "<refined solution>  \n\n*(Repeated for each question-answer pair above.)"
        ]
      },
      "primary_key": {
        "id": 6
      }
    },
    {
      "_score": "0.65",
      "dataset": "qs",
      "matches": {
        "answer": [
          "$\\frac{5}{6} < \\frac{5}{5}$ because $\\frac{5}{6}$ is less than 1, while $\\frac{5}{5}$ equals 1.  \n\nFinal answer: $\\boxed{<}$"
        ]
      },
      "primary_key": {
        "id": 58
      }
    },
    {
      "_score": "0.64",
      "dataset": "qs",
      "matches": {
        "answer": [
          "This is an example of a $\\boxed{\\text{rate}}$ because it compares two unlike denominate numbers (erasers and pencils)."
        ]
      },
      "primary_key": {
        "id": 543
      }
    },
    {
      "_score": "0.64",
      "dataset": "qs",
      "matches": {
        "answer": [
          "1. In words: \"two and three tenths.\"  \n2. As a fraction: \\(\\boxed{\\dfrac{23}{10}}\\)."
        ]
      },
      "primary_key": {
        "id": 1318
      }
    }
  ]
}
