crates/runtime/tests/models/snapshots/integration_models__models__search__openai_casing_no_chunking_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.78",
      "dataset": "clickbench_no_chunking",
      "matches": {
        "Referer": [
          "https://go.mail/folder-1/online=on&acceTWg&bvm=bv.48705608,d.bGE&cad=rjt&fu=0&int[234][to]=&input"
        ]
      }
    },
    {
      "_score": "0.78",
      "dataset": "clickbench_no_chunking",
      "matches": {
        "Referer": [
          "https://go.mail/folder-1/online=on&acceTWg&bvm=bv.48705608,d.bGE&cad=rjt&fu=0&int[234][to]=&input"
        ]
      }
    }
  ]
}
