crates/runtime/tests/models/snapshots/integration_models__models__search__openai_chunking_response.snap
---
source: crates/runtime/tests/models/mod.rs
expression: normalize_search_response(response)
---
{
  "duration_ms": "duration_ms_val",
  "matches": [
    {
      "dataset": "catalog_page_with_chunking",
      "primary_key": {
        "cp_catalog_page_sk": 13
      },
      "score": "score_val",
      "value": "Respects might appear early, long metres. Cases would understan"
    }
  ]
}
