crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_chunking_metadata_vector_search_sql_match_and_underlying.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 612,
    "_match": "\n2",
    "answer": "1. Perform the division: \\(4 \\div 10 = 0.4\\).  \n2. The decimal \\(0.4\\) is expressed in words as \\(\\boxed{\\text{four tenths}}\\).",
    "trunc(vector_search(qs, Utf8(\"second\"))._score,Int64(3))": 0.796
  },
  {
    "id": 349,
    "_match": " is 2.",
    "answer": "The missing factor is \\(\\boxed{2}\\).  \n\n(Explanation: Since \\( 21 \\times 2 = 42 \\), the missing factor is 2.)",
    "trunc(vector_search(qs, Utf8(\"second\"))._score,Int64(3))": 0.785
  },
  {
    "id": 948,
    "_match": "\\times 2 \\times 2 \\times 2 = 32\\)",
    "answer": "The fifth root of 32 is \\(\\boxed{2}\\), because \\(2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).",
    "trunc(vector_search(qs, Utf8(\"second\"))._score,Int64(3))": 0.555
  },
  {
    "id": 1277,
    "_match": "\\times 2 \\times 2 \\times 2 = 32\\)",
    "answer": "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\).",
    "trunc(vector_search(qs, Utf8(\"second\"))._score,Int64(3))": 0.555
  }
]
